--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,9 +25,17 @@ jobs:
         python-version: "3.12"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install .
-    - name: Test with pytest
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov
+
+    - name: Install the package
       run: |
-        pip install pytest pytest-cov
-        pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        pip install .
+
+    - name: Add project to PYTHONPATH
+      run: |
+        echo "$(pwd)" >> $GITHUB_ENV
+
+    - name: Run tests
+      run: |
+        pytest --cov=./
