--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,17 +25,9 @@ jobs:
         python-version: "3.12"
     - name: Install dependencies
       run: |
-          python -m pip install --upgrade pip
-          pip install pytest pytest-cov
-
-    - name: Install the package
-      run: |
+        python -m pip install --upgrade pip
         pip install .
-
-    - name: Add project to PYTHONPATH
+    - name: Test with pytest
       run: |
-        echo "$(pwd)" >> $GITHUB_ENV
-
-    - name: Run tests
-      run: |
-        pytest --cov=./
+        pip install pytest pytest-cov
+        pytest  --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
