--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,10 +1,8 @@
 name: test
 
 on:
-  push:
-    branches: [ "dev", "main"]
   pull_request:
-    branches: [ "dev", "main"]
+    branches: ["main"]
 
 permissions:
   contents: read
